<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="-1dp"
        android:scaleType="fitXY"
        android:src="@drawable/bg" />
    <ImageView
        android:id="@+id/register_exit_iv"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_margin="10dp"
        android:src="@drawable/close"/>
    <TextView
        android:id="@+id/change_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_text"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="#fff"
        android:layout_margin="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"/>
    <RelativeLayout
        android:id="@+id/register_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone">
        <EditText
            android:id="@+id/register_name_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="14"
            android:inputType="textPersonName"
            android:hint="@string/user_name_hint"
            android:textColorHint="#fff"
            android:textColor="#fff"
            android:textSize="16sp"
            android:drawableTint="#fff"
            android:drawableStart="@drawable/user"
            android:drawablePadding="10dp"
            android:layout_centerHorizontal="true"/>
        <EditText
            android:id="@+id/register_pw_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/lock"
            android:drawablePadding="10dp"
            android:drawableTint="#fff"
            android:ems="14"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:textSize="16sp"
            android:layout_below="@id/register_name_et"/>
        <EditText
            android:id="@+id/register_mobile_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/mobile"
            android:drawablePadding="10dp"
            android:drawableTint="#fff"
            android:ems="14"
            android:hint="@string/register_phone"
            android:inputType="phone"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:textSize="16sp"
            android:layout_below="@id/register_pw_et"/>
        <EditText
            android:id="@+id/register_email_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/mail"
            android:drawablePadding="10dp"
            android:drawableTint="#fff"
            android:ems="14"
            android:hint="@string/register_email"
            android:inputType="textEmailAddress"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:textSize="16sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/register_mobile_et"/>
        <Button
            android:id="@+id/register_login_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/register"
            android:padding="15dp"
            android:background="#fff"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#dd000000"
            android:layout_below="@id/register_email_et"
            android:layout_alignStart="@id/register_pw_et"
            android:layout_alignEnd="@id/register_pw_et"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/login_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <EditText
            android:id="@+id/login_name_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="14"
            android:inputType="textPersonName"
            android:hint="@string/user_name_hint"
            android:textColorHint="#fff"
            android:textColor="#fff"
            android:textSize="16sp"
            android:drawableTint="#fff"
            android:drawableStart="@drawable/user"
            android:drawablePadding="10dp"
            android:layout_centerHorizontal="true"/>
        <EditText
            android:id="@+id/login_pw_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/lock"
            android:drawablePadding="10dp"
            android:drawableTint="#fff"
            android:ems="14"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:textSize="16sp"
            android:layout_below="@id/login_name_et"/>
        <Button
            android:id="@+id/login_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/login"
            android:padding="15dp"
            android:background="#fff"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#dd000000"
            android:layout_below="@id/login_pw_et"
            android:layout_alignStart="@id/login_pw_et"
            android:layout_alignEnd="@id/login_pw_et"/>
    </RelativeLayout>

</RelativeLayout>